# soliloquy

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  IMPLEMENTATION_SUMMARY.md  MODULE.bazel  WORKSPACE.bazel  env.sh  readme.md  sol  start.sh  test_sled_file.rs
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: auth.v  cupboard.v  display.v  main.v  search.v  sync.v  tableware.v  zircon.v
bundle/: files.crepus  files.html  index.html  settings.crepus  settings.html
bundle/terminal/: index.html
demo_cache/: db
docs/: ARCHITECTURE.md  DOCUMENTATION_ORGANIZATION.md  INDEX.md  PRODUCT_CONFIG.md  README.md  api_contract.md  browser_chrome.md  browser_optimizations.md  build.md  contributing.md  repo_split_plan.md  rv8_linkage_roadmap.md  v0-architecture.md
docs/architecture/: README.md  appliance-system.md  architecture.md  browser-centric-os.md  immutable-rootfs.md  os-optimization-plan.md  solfs.md
docs/guides/: README.md  dev_guide.md  driver_porting.md  getting_started_with_testing.md  servo_integration.md  tools_reference.md
docs/testing/: README.md  testing.md
docs/tutorials/: README.md  getting_started.md
drivers/common/soliloquy_hal/: BUILD.gn  clock_reset.h  firmware.cc  firmware.h  mmio.h  sdio.cc  sdio.h
drivers/generic/: Cargo.toml  README.md  clock.rs  gpio.rs  lib.rs  mmc.rs  traits.rs  uart.rs
drivers/wifi/aic8800/: BUILD.gn  aic8800.cc  aic8800.h
drivers/wifi/aic8800/meta/: aic8800.bind  aic8800.cml
examples/: browser_simulation.rs  integration_demo.rs  production_demo.rs
image-overlay/: init
image-overlay/etc/dinit.d/: sold  soliloquy-session
products/: BUILD.gn
scripts/: build-ghostty-wasm.sh  build.sh  ci-os-appliance.sh  ci-qemu-appliance.sh  ci-qemu-solfs-disk-root.sh  ci-rust-core.sh  ci-solfs-kernel-module.sh  clang-cross.sh  clang-linker-dynamic.sh  clang-linker-no-pie.sh  clang-linker.sh  dev.sh  display_test.sh  fx-env.sh  zig-cc-wrapper.sh
scripts/lib/: common.sh
sold/: Cargo.toml
sold/src/: main.rs  main.rs.bak
soliloquy-web/: index.crepus  web.toml
soliloquy-web/runtime/: Cargo.toml
src/: BUILD.bazel  Cargo.toml  README.md  driver_catalog.rs  driver_manager.rs  lib.rs  memory.rs  runtime.rs  settings.rs  test_utils.rs  v8_integration.rs
src/cache/: disk_cache.rs  mod.rs  texture_atlas.rs  unified.rs
src/desktop/: Cargo.toml
src/desktop/src/: app_registry.rs  lib.rs  main.rs  session.rs  status.rs
src/gpu/: compositor.rs  layout_compute.rs  mod.rs  wgpu_integration.rs
src/gpu/shaders/: composite.wgsl  layout.wgsl
src/memory/: compression.rs  disk_storage.rs  mod.rs  pressure.rs  residency.rs
src/network/: mod.rs  prefetch.rs  priority.rs
src/rv8/: Cargo.toml  TODO.md  lib.rs  main.rs  readme.md
src/rv8/benches/: js_execution.rs  rendering.rs
src/rv8/compositor/: mod.rs
src/rv8/core/: browser.rs  config.rs  mod.rs  navigation.rs  process_manager.rs  tab.rs
src/rv8/ipc/: messages.rs  mod.rs
src/rv8/js/: bindings.rs  engine.rs  mod.rs  value.rs
src/rv8/networking/: mod.rs
src/rv8/optimizations/: flags.rs  memory.rs  mod.rs  monitor.rs  preload.rs  render_opts.rs  v8_opts.rs
src/rv8/renderer/: mod.rs  process.rs  render_frame.rs
src/rv8/servo_embed/: dom.rs  mod.rs  paint.rs  parser.rs  servo_renderer.rs  web_apis.rs
src/rv8/storage/: mod.rs
src/rv8/ui/: mod.rs
src/shell/: BUILD.bazel  BUILD.gn  Cargo.toml  browser_optimizations.rs  engine_bridge.rs  gpui_app.rs  integration_tests.rs  js_engine.rs  lib.rs  main.rs  main_desktop.rs  main_simple.rs  main_test.rs  optimizations.rs  servo_embedder.rs  v8_runtime.rs  v8_test.rs
src/shell/.cargo/: config.toml
src/shell/net/: code_cache.rs  connection_manager.rs  mod.rs  quic.rs  resource_loader.rs  speculation.rs
src/shell/platform/: fuchsia.rs  linux.rs  macos.rs  mobile.rs  mod.rs
src/v8_integration/: gc_scheduler.rs  mod.rs  snapshots.rs
src/zircon/: channels.rs  isolation.rs  mod.rs  vmo.rs
system/alpine/: README.md  build-rootfs.sh  configure-rootfs.sh  ensure-servo-fork.sh  kernel-policy.json  packages-v0-dev.txt  packages-v0.txt  qemu-v0.sh  services.json  setup-host.sh  stage-soliloquy-artifacts.sh
system/alpine/docker/: rootfs.Dockerfile
system/alpine/filesystems/: rootfs-layout.json
system/alpine/kernel/: APKBUILD  README.md  hybrid-kernel.json  soliloquy-internet-appliance.config  validate-kernel-config.sh
system/alpine/openrc/: seatd  sol-kernel-policy  sol-netd  sol-pressure  sol-session  sol-zram  sold
system/alpine/rootfs-overlay/: init
system/alpine/scripts/: apply-kernel-policy.sh  apply-pressure-policy.sh  apply-zram-policy.sh  audit-package-budget.sh  build-native-policy-modules.sh  build-qemu-image.sh  build-qemu-initramfs.sh  build-rootfs-image.sh  build-rootfs-in-docker.sh  build-rootfs.sh  build-solfs-module.sh  configure-rootfs.sh  ensure-linux-runtime-binaries.sh  ensure-servo-fork.sh  fetch-qemu-kernel.sh  qemu-v0.sh  run-qemu.sh  setup-host.sh  sol-servo-wrapper  sol-session-start  stage-soliloquy-artifacts.sh  validate-filesystem-plan.sh
system/appliance/: README.md  backend.schema.json  backends.json
system/appliance/filesystems/: rootfs-layout.json  state-mounts.json
system/appliance/installers/: oil.json
system/appliance/scripts/: oil-installer.sh  select-backend.sh
system/backends/void/: README.md  backend.json  packages-dev.txt  packages-runtime.txt
system/kernelctl/: Cargo.toml
system/kernelctl/src/: main.rs
system/native/kernel-policy-v/: policy.v  v.mod
system/netd/: Cargo.toml
system/netd/src/: lib.rs  main.rs
system/sold/: Cargo.toml
system/sold/src/: main.rs
system/solfs/kernel/: Kbuild  Makefile  solfs_core.rs  solfs_format.h  solfs_vfs.c  validate-solfs-kernel.sh
system/solfsctl/: Cargo.toml
system/solfsctl/src/: lib.rs  main.rs  (+1 more)
test/.cargo/: config.toml
tools/: rv8_servo_test.sh
tools/soliloquy/: build_ui.sh  dev_ui.sh  setup.sh  smoke_macos.sh  start.sh  start_macos.sh  validate_manifest.sh
ui/desktop/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+41 files in other folders)
