# Soliloquy - Bazel Module

module(
    name = "soliloquy",
    version = "0.1.0",
)

# Rust rules
bazel_dep(name = "rules_rust", version = "0.56.0")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# Google Test
bazel_dep(name = "googletest", version = "1.15.2")

# Platforms for cross-compilation
bazel_dep(name = "platforms", version = "0.0.11")

# ============================================================================
# Rust Crate Dependencies (via crate_universe)
# ============================================================================

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Define individual crates we need
crate.spec(
    package = "futures",
    version = "0.3",
)

crate.spec(
    package = "log",
    version = "0.4",
)

crate.spec(
    package = "env_logger",
    version = "0.10",
)

crate.spec(
    package = "bitflags",
    version = "1.3",
)

crate.spec(
    package = "async-trait",
    version = "0.1",
)

crate.spec(
    package = "thiserror",
    version = "1.0",
)

crate.spec(
    package = "tokio",
    version = "1.40",
    features = ["full"],
)

# Generate crate repository from specs
crate.from_specs()
use_repo(crate, "crates")

# ============================================================================
# V Language Toolchain
# ============================================================================

# V toolchain is built locally from source - see .build-tools/v/
# The v_compile.py script uses V_HOME or falls back to .build-tools/v/

# TODO: Decide whether Bazel remains part of the Alpine/Linux toolchain
