# Soliloquy - Bazel Workspace

workspace(name = "soliloquy")

# Rust rules
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "4a9cb4fda6ccd5b5ec393b2e944822a62e050c7c06f1ea41607f14c4fdec57a2",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.33.0/rules_rust-v0.33.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = ["1.75.0"],
)

# V toolchain for c2v translation
# V_HOME environment variable or .build-tools/v/ directory
# Run tools/soliloquy/c2v_pipeline.sh --bootstrap-only to install

# C++ toolchain for drivers
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
