# Browser Optimization System - Bazel Build
# Comprehensive optimization for 150+ tabs at <3GB RAM

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# Main browser optimizations library
rust_library(
    name = "soliloquy_browser_optimizations",
    srcs = glob([
        "*.rs",
        "memory/*.rs",
        "gpu/*.rs",
        "cache/*.rs",
        "v8_integration/*.rs",
        "network/*.rs",
    ]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:log",
    ],
    # Feature flags for conditional compilation
    crate_features = [
        # Uncomment when zstd dependency is added:
        # "real_compression",
    ],
)

# Unit tests for all modules
rust_test(
    name = "browser_optimizations_test",
    crate = ":soliloquy_browser_optimizations",
    edition = "2021",
    deps = [
        "@crates//:log",
    ],
)

# Test suite
test_suite(
    name = "browser_optimizations_tests",
    tests = [
        ":browser_optimizations_test",
    ],
)
