[package]
name = "soliloquy_browser_optimizations"
version = "0.1.0"
edition = "2021"

[lib]
name = "soliloquy_browser_optimizations"
path = "lib.rs"

[[example]]
name = "browser_simulation"
path = "../examples/browser_simulation.rs"

[[example]]
name = "production_demo"
path = "../examples/production_demo.rs"

[dependencies]
log = "0.4"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"

[dev-dependencies]
env_logger = "0.10"
tempfile = "3.8"

[features]
default = ["real_compression"]
# Enable real zstd compression
real_compression = []
