[package]
name = "soliloquy-daemon"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "soliloquy-daemon"
path = "src/main.rs"

[dependencies]
# Workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
axum = { workspace = true }
tower-http = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

# App spawning
portable-pty.workspace = true
uuid = { workspace = true }

# System info
whoami = "1"
