# Soliloquy Shell - Bazel Build

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test", "rust_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

# SDK integration test (C++)
cc_binary(
    name = "sdk_test",
    srcs = ["sdk_test.cc"],
    copts = ["-I$(BINDIR)/external/soliloquy/sdk/arch/arm64/sysroot/include"],
    deps = [
        "//sdk:zircon_lib",
    ],
)

# Simplified shell for testing build system
rust_binary(
    name = "soliloquy_shell_simple",
    srcs = ["main_simple.rs"],
    edition = "2021",
)

# Full shell with Fuchsia dependencies (WIP)
rust_binary(
    name = "soliloquy_shell",
    srcs = [
        "main.rs",
        "zircon_window.rs",
        "servo_embedder.rs",
    ],
    edition = "2021",
    deps = [
        "//gen/fidl/fuchsia_ui_composition",
        "//gen/fidl/fuchsia_ui_views",
        "//gen/fidl/fuchsia_ui_app",
        "//gen/fidl/fuchsia_input",
        "//vendor/servo:servo_mock",
        # TODO: Add Fuchsia SDK dependencies
        # TODO: Add rusty_v8 dependency via cargo
        # TODO: Add Servo dependency
    ],
    # Add rustc flags for V8 linking if needed
    rustc_flags = [
        # Add any V8-specific flags here
    ],
)

# Library for testing
rust_library(
    name = "soliloquy_shell_lib",
    srcs = [
        "lib.rs",
        "servo_embedder.rs",
        "v8_runtime.rs",
        "zircon_window.rs",
    ],
    edition = "2021",
    deps = [
        "//src:soliloquy_browser_optimizations",
        "//gen/fidl/fuchsia_ui_composition",
        "//gen/fidl/fuchsia_ui_views",
        "//gen/fidl/fuchsia_input",
        "@crates//:futures",
        "@crates//:log",
        "@crates//:rusty_v8",
    ],
)

# Unit tests for ServoEmbedder
rust_test(
    name = "servo_embedder_test",
    crate = ":soliloquy_shell_lib",
    edition = "2021",
)

# Integration tests
rust_test(
    name = "shell_integration_tests",
    srcs = ["integration_tests.rs"],
    edition = "2021",
    deps = [
        ":soliloquy_shell_lib",
        "@crates//:log",
    ],
)

# FIDL integration tests
rust_test(
    name = "shell_fidl_integration_tests",
    srcs = ["fidl_integration_tests.rs"],
    edition = "2021",
    deps = [
        "//test/support:soliloquy_test_support",
        "@crates//:futures",
        "@crates//:log",
    ],
)

# Test suite combining all shell tests
test_suite(
    name = "soliloquy_shell_tests",
    tests = [
        ":servo_embedder_test",
        ":shell_integration_tests",
        ":shell_fidl_integration_tests",
    ],
)
