[package]
name = "soliloquy-shell"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
futures.workspace = true
rusty_v8.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true

# FIDL dependencies
fidl = { path = "../../third_party/fuchsia-sdk-rust/fidl" }
fuchsia-async = { path = "../../third_party/fuchsia-sdk-rust/fuchsia-async" }
fuchsia-component = { path = "../../third_party/fuchsia-sdk-rust/fuchsia-component" }
fuchsia-syslog = { path = "../../third_party/fuchsia-sdk-rust/fuchsia-syslog" }
fuchsia-zircon = { path = "../../third_party/fuchsia-sdk-rust/fuchsia-zircon" }

# Generated FIDL bindings
fuchsia_ui_composition = { path = "../../gen/fidl/fuchsia_ui_composition" }
fuchsia_ui_views = { path = "../../gen/fidl/fuchsia_ui_views" }
fuchsia_ui_app = { path = "../../gen/fidl/fuchsia_ui_app" }
fuchsia_input = { path = "../../gen/fidl/fuchsia_input" }

# Networking dependencies
rustls = "0.23"
rustls-native-certs = "0.8"
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"

# Crypto and hashing
sha2 = "0.10"
rand = "0.8"

# Data structures
lru = "0.12"

# URL parsing
url = "2.5"

# Time utilities
chrono = "0.4"

# Glob pattern matching
glob = "0.3"

[dev-dependencies]
tokio-test.workspace = true
env_logger.workspace = true

[features]
default = []
fuchsia = []

[lib]
name = "soliloquy_shell"
path = "lib.rs"

[[bin]]
name = "soliloquy_shell"
path = "main.rs"

[[bin]]
name = "soliloquy_shell_simple"
path = "main_simple.rs"
