[package]
name = "soliloquy-shell"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
futures.workspace = true
rusty_v8.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
env_logger.workspace = true
soliloquy_browser_optimizations = { path = ".." }

# Networking dependencies
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }

# Crypto and hashing
sha2 = "0.10"
rand = "0.8"

# Data structures
lru = "0.12"

# URL parsing
url = "2.5"

# Time utilities
chrono = "0.4"

# Glob pattern matching
glob = "0.3"

# Windowing
winit = "0.30"

[dev-dependencies]
tokio-test.workspace = true

[features]
default = ["desktop"]
desktop = []
mobile = []

[lib]
name = "soliloquy_shell"
path = "lib.rs"

[[bin]]
name = "soliloquy_shell"
path = "main.rs"

[[bin]]
name = "soliloquy_shell_simple"
path = "main_simple.rs"
