[package]
name = "soliloquy-shell"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
futures.workspace = true
# ponytail: rusty_v8 removed — rv8 handles V8 integration
# rusty_v8.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
env_logger.workspace = true
soliloquy_browser_optimizations = { path = ".." }

# Networking dependencies
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
h3 = "0.0.8"
h3-quinn = "0.0.10"
bytes = "1"
quinn = { version = "0.11.7", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }

# Crypto and hashing
sha2 = "0.10"
rand = "0.8"

# Data structures
lru = "0.12"

# URL parsing
url = "2.5"

# Time utilities
chrono = "0.4"

# Glob pattern matching
glob = "0.3"

# Windowing
winit = "0.30"
crepuscularity-gpui = { path = "../../../crepuscularity/crates/crepuscularity-gpui", optional = true }
gpui = { version = "=0.2.2", default-features = false, features = ["font-kit"], optional = true }

[dev-dependencies]
tokio-test.workspace = true

[features]
default = ["desktop"]
desktop = []
gpui = ["dep:crepuscularity-gpui", "dep:gpui"]
mobile = []

[lib]
name = "soliloquy_shell"
path = "lib.rs"
doctest = false

[[bin]]
name = "soliloquy_shell"
path = "main.rs"

[[bin]]
name = "soliloquy_shell_simple"
path = "main_simple.rs"

[[bin]]
name = "soliloquy_desktop"
path = "main_desktop.rs"
