

source_set("soliloquy_hal") {
  sources = [
    "clock_reset.cc",
    "clock_reset.h",
    "firmware.cc",
    "firmware.h",
    "mmio.cc",
    "mmio.h",
    "sdio.cc",
    "sdio.h",
  ]
  
  public_deps = [
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//sdk/banjo/fuchsia.hardware.sdio:fuchsia.hardware.sdio_banjo_cpp",
    "//zircon/system/ulib/zx",
    "//zircon/system/ulib/hwreg",
    "//sdk/lib/driver/mmio/cpp",
  ]
  
  deps = [
    "//src/devices/lib/driver",
  ]
  

}
